fixed horizontal scroll bug

--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -51,6 +51,7 @@ body {
   color: var(--text-color);
   text-shadow: var(--text-shadow);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 ul {
